--- a/style.css
+++ b/style.css
@@ -257,3 +257,53 @@ h1, h2 {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207cca', endColorstr='#9f58a3',GradientType=1 ); /* IE6-9 */
   }
  
+
+/*****************
+ PAGINA GALERIA
+ *****************/
+
+
+ .galeria-container{
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  padding: 4% 2%;
+  box-sizing: border-box;
+  
+}
+
+.galeria-box{
+  flex: 1;
+  overflow: hidden;
+  margin: 8px;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.20);
+  line-height: 0;
+  transition: all 600ms;
+}
+
+.galeria-box > img{
+  width: 200%;
+  /* height: calc(100% - 10vh); */
+  height: 100%;
+  object-fit: cover;
+  transition: all 300ms;
+}
+
+/* .galeria-box > span{
+  font-size: 35px;
+  font-family: sans-serif;
+  display: block;
+  text-align: center;
+  height: 10vh;
+  line-height: 2.6;
+} */
+
+.galeria-box:hover{
+  flex: 20%;
+}
+
+.galeria-box:hover > img{
+  width: 100%;
+  height: 100%;
+}
+
